--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,8 @@
         "deque": "cpp",
         "forward_list": "cpp",
         "list": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "string": "cpp",
+        "system_error": "cpp"
     }
 }
